Fix sub element bottom property value
The line height updates caused lines with sub element children to render
vertical scrollbars

--- a/css/generic/normalys.css
+++ b/css/generic/normalys.css
@@ -37,6 +37,10 @@ p {
   margin: var(--paragraph--margin);
 }
 
+sub {
+  bottom: -0.2em;
+}
+
 pre {
   background: var(--color--foreground--lightest);
   border-radius: var(--code--padding);
